@startuml
left to right direction

class CustomUser {
    + Standard Django User fields
    + slug
    + skills : Skill[]
}

class Skill {
    + id : int
    + name: str
    + category : Category
}

class Category {
    + id : int
    + name: str
    + description : str
}
class Schedule {
    + id : int
    + giver : CustomUser
    + taker : CustomUser | None
    + scheduled_at : DateTime
    + duration : int | None
    + is_active : bool
    + skill : Skill
    + activity_description : str | None
    + is_request : bool
    + create_connections() : void
}

class Message {
    + id : int
    + content : str
    + created_at : DateTime
    + read_at : DateTime | None
}

class Connection {
    + id : int
    + taker : CustomUser
    + giver : CustomUser
    + schedule : Schedule
    + is_activated : bool
    + created_at : DateTime
    + chat : Message[]
}

CustomUser "1..*" --left- "0..*" Skill : possède
Category "1" -- "0..*" Skill
CustomUser "1" -down- "0..1" Schedule : giver
CustomUser "0..1" -- "1" Schedule : taker
Schedule "1" -- "0..*" Skill
CustomUser "1" -right- "0..*" Connection
Schedule "0..1" -right-- "1" Connection
Message "0..*" -down- "1" Connection